<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Afines</string>
    <string name="overview_activity">Overview</string>
    <string name="login">Inciar sesión</string>
    <string name="invoice_menu_text">Facturas</string>
    <string name="profile_menu_text">Perfil</string>
    <string name="overview_menu_text">Inicio</string>
    <string name="upload_invoice_activity_title">Factura</string>
    <string name="edit_invoice_activity_title">Editar factura</string>

    <string name="invoices_screen_title">Mis facturas</string>

    <string name="header_save_generic_text">Guardar</string>

    <string name="upload_pick_file_header_tag">Selecciona tu factura</string>
    <string name="upload_name_header_tag">Escoge un nombre para tu factura</string>
    <string name="upload_trimeser_header_tag">¿De que trimestre es la factura?</string>

    <string name="upload_first_trimester_text">Primer trimestre</string>
    <string name="upload_second_trimester_text">Segundo trimestre</string>
    <string name="upload_third_trimester_text">Tercer trimestre</string>
    <string name="upload_forth_trimester_text">Cuarto trimestre</string>
    <string name="upload_empty_trimester_text">-</string>

    <string name="upload_name_error_title">¡Nos faltan datos!</string>
    <string name="upload_name_error_message">Comprueba que hayas subido una factura y que el nombre sea válido.</string>

    <string name="invoice_state_delivered">Enviada</string>
    <string name="invoice_state_processed">Aprobada</string>
    <string name="invoice_state_failed">Rechazada</string>
    <string name="invoice_state_accounted">Aprobada</string>

    <string name="invoice_state_failed_details">Por favor compruebe que la factura enviada no este en otro formato (ticket, albarán, etc…) y que no se vea borrosa.</string>

    <string name="invoice_details_edit_tag">Editar factura</string>
    <string name="invoice_details_download_tag">Descargar factura</string>
    <string name="invoice_details_delete_tag">Borrar factura</string>

    <string name="invoice_download_error_message">Algo ha ido mal con la descarga. Por favor intentelo otra vez mas tarde.</string>
    <string name="invoice_download_success_message">¡La descarga se ha completado con éxito!</string>

    <string name="invoice_details_loading_failed_message">No se pudo mostrar la factura. Por favor intentelo otra vez mas tarde.</string>

    <string name="invoices_overview_error_message">"No se pudieron recuperar las facturas. Por favor intentelo otra vez mas tarde"</string>
    <string name="invoice_upload_error_message">No se pudo recuperar la factura. Por favor intenterlo otra vez mas tarde.</string>
    <string name="invoices_upload_error_message">No se pudo subir su factura. Por favor intentelo otra vez mas tarde.</string>

    <string name="invoice_delete_success_message">La factura se ha borrado con éxito</string>
    <string name="invoice_delete_error_message">No se ha podido borrar la factura. Por favor intentelo otra vez mas tarde.</string>

    <string name="invoice_edit_success_message">La factura se ha actualizado con éxito</string>
    <string name="invoice_edit_error_message">No se ha podido actualizar la factura. Por favor intentelo otra vez mas tarde.</string>

    <string name="delete_invoice_alert_dialog_title">Borrar factura</string>
    <string name="delete_invoice_alert_dialog_message">¿Estás seguro que quieres borrar la factura?</string>
    <string name="alert_dialog_continue_text">Continuar</string>
    <string name="alert_dialog_cancel_text">Cancelar</string>

    <string name="profile_email_hint_text">Email</string>
    <string name="profile_address_hint_text">Dirección fiscal</string>
    <string name="profile_dni_hint_text">DNI</string>
    <string name="profile_cif_hint_text">CIF</string>
    <string name="profile_naf_hint_text">NAF</string>
    <string name="profile_ccc_hint_text">CCC</string>
    <string name="profile_iban_hint_text">IBAN</string>
    <string name="profile_phone_hint_text">Teléfono</string>

    <string name="profile_naf_extended_text">NAF (Nº afiliación seg. social)</string>
    <string name="profile_ccc_extended_text">CCC (Cód. cuenta de cotización)</string>
    <string name="profile_iban_extended_text">IBAN (Nº cuenta bancaria)</string>

    <string name="overview_personal_card_naf_subtitle">Nº afiliación seg. social</string>
    <string name="overview_personal_card_ccc_subtitle">Cód. cuenta de cotización</string>
    <string name="overview_personal_card_iban_subtitle">Nº cuenta bancaria</string>

    <string name="password_hint_text">Contraseña</string>

    <string name="logout_text">Cerrar sessión</string>
    <string name="profile_save_button_text">Guardar</string>

    <string name="profile_edit_success_message">Tus datos se han actualizado con éxito!</string>
    <string name="profile_edit_error_message">No se han podido actualizar tus datos. Por favor intentelo otra vez mas tarde.</string>
    <string name="photo_capture_error_message">Ha habido un problema creando el fichero. Asegurese de tener espacio disponible en el dispositivo.</string>

    <string name="update_password_activity_title">Cambiar contraseña</string>
    <string name="update_password_text">Cambiar contraseña</string>
    <string name="current_password_tag">Contraseña actual</string>
    <string name="new_password_tag">Nueva contraseña</string>
    <string name="new_password_confirm_tag">Confirmar nueva contraseña</string>

    <string name="password_update_success_text">La contraseña se ha actualizado con éxito.</string>
    <string name="password_update_missing_fields_text">Hay campos sin rellenar, por favor revisa el formulario e intentelo otra vez.</string>
    <string name="password_update_invalid_password_text">La contraseña actual no es valida. Por favor revisela e intentelo otra vez.</string>
    <string name="password_update_weak_password_text">La contraseña debe de tener al menos 6 caracteres.</string>
    <string name="password_update_not_matching_text">La confimación de contraseña no coincide con la nueva contraseña.</string>

    <string name="login_invalid_email_text">El email no es válido</string>
    <string name="login_invalid_password_text">La contraseña no es válida</string>

    <string name="generic_error_text">Algo ha ido mal, por favor inténtelo de nuevo mas tarde</string>
    <string name="login_user_doesnt_exist_text">No existe ninguna cuenta con ese email</string>
    <string name="retrieve_pass_confirmation_text">Se han enviado instrucciones para cambiar tu contraseña a su email.</string>
    <string name="retrieve_pass_header_text">Enviar email para cambiar contraseña</string>
    <string name="retrieve_pass_message_text">Introduce el email que usaste para registrarte.</string>
    <string name="retrieve_pass_send_text">Enviar</string>
    <string name="forgotten_pass_text">¿Has olvidado tu contraseña?</string>

    <string name="overview_password_change_message">Recuerda cambiar tu contraseña en el menú de opciones de tu perfil.</string>
    <string name="overview_password_change_instructions">Perfil -> </string>
    <string name="overview_action_button_text">Acceder</string>

    <string name="profile_invalid_iban_message">El IBAN proporcionado no es correcto.</string>

    <plurals name="taxes_days_left_text">
        <item quantity="one">Queda %1$s día para presentar:\n%2$s</item>
        <item quantity="other">Quedan %1$s días para presentar:\n%2$s</item>
    </plurals>
    <string name="overview_taxes_header_text">Calendario de impuestos</string>
    <string name="overview_rejected_invoices_message_text">Alguna de tus facturas ha sido rechazada. Por favor, comprueba tus facturas y actualízalas si es necesario.</string>

    <string name="overview_invoices_sent_text">Facturas enviadas</string>
    <string name="overview_invoices_approved_text">Facturas aprobadas</string>
    <string name="overview_invoices_rejected_text">Facturas rechazadas</string>

    <string name="my_invoices_header_text">MIS FACTURAS</string>
    <string name="my_profile_header_text">MIS DATOS</string>
    <string name="my_invoices_button_text">VER TODAS</string>
    <string name="my_profile_button_text">VER PERFIL</string>
    <string name="overview_notification_go_to_text">IR</string>
    <string name="overview_notification_header_text">Notificaciones</string>

    <string name="invoices_tab_first_trimester_name">1ºT</string>
    <string name="invoices_tab_second_trimester_name">2ºT</string>
    <string name="invoices_tab_third_trimester_name">3ºT</string>
    <string name="invoices_tab_forth_trimester_name">4ºT</string>

    <string name="invoices_header_trimester_dates_from_to">Desde el %1$s hasta el %2$s</string>
    <string name="invoices_header_trimester_dates_from">Hasta el %1$s</string>

    <string name="invoice_details_sent_message">Tu factura ha sido enviada y está pendiente de ser revisada. En caso de que la factura pertenezca al trimestre pasado nuestro equipo se encargará de corregir su localización.</string>
    <string name="invoice_details_approved_message">Tu factura ha sido revisada y contabilizada.</string>
    <string name="invoice_details_rejected_message">Tu factura ha sido rechazada. Por favor, comprueba que no se vea borrosa y que cumpla los requisitos de una factura.</string>

    <string name="invoice_upload_replace_text">Reemplazar\nfactura</string>
    <string name="profile_user_info_error">No se han podido recuperar los datos del usuario, por favor inténtelo otra vez mas tarde.</string>

    <string name="overview_to_invoices_transition_name">header_transition</string>

    <string name="app_version">versión %1$s(%2$s)-%3$s</string>
</resources>
