...
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_upload_invoice_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/secondary"
        android:backgroundTint="@color/secondary"
        app:backgroundTint="@color/secondary"
        app:layout_anchor="@id/bottom_navigation_app_bar"
...
