<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_save_password"
        android:title="@string/header_save_generic_text"
        app:showAsAction="ifRoom" />
</menu>